fixed spacing issue on two other pages due to portfolio extension

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,7 +340,7 @@ header {
   margin-right: 20px;
 }
 
-.container {
+.containertwo {
   border: 1px solid #cccccc;
   width: 960px;
   margin: 40px auto;
